--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>ywang862 Example-SMART-App</title>
+    <title>ywang862 SMART-App</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
