--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>Example-SMART-App</title>
+    <title>www Example-SMART-App</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'CLIENT_ID_HERE',
+        'client_id': 'c82ea02a-7b7f-4bb5-a582-8e23b4adaf6a',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
