--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -45,6 +45,10 @@
           <td id='height'></td>
         </tr>
         <tr>
+          <th>Weight:</th>
+          <td id='height'></td>
+        </tr>
+        <tr>
           <th>Systolic Blood Pressure:</th>
           <td id='systolicbp'></td>
 
