--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <title>ywang862 Example-SMART-App</title>
+    <title>ywang862 SMART App</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
 
@@ -46,7 +46,7 @@
         </tr>
         <tr>
           <th>Weight:</th>
-          <td id='height'></td>
+          <td id='weight'></td>
         </tr>
         <tr>
           <th>Systolic Blood Pressure:</th>
