--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -17,7 +17,7 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
-      <h2>ywang862 Example-SMART-App</h2>
+      <h2>ywang862 Example-SMART-App in Index</h2>
 
       <h2>Patient Resource</h2>
       <table>
