--- a/example-smart-app/health.html
+++ b/example-smart-app/health.html
@@ -11,6 +11,7 @@
     -->
   </head>
   <body>
+    
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
       Temporarily disable cerner-smart-embeddable-lib
@@ -19,6 +20,6 @@
     -->
 
     <img src="./src/images/batman.gif" alt="Batman">
-    <p>Healthy!</p>
+    <p>Healthy! ywang</p>
   </body>
 </html>
