--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -46,6 +46,7 @@
         </tr>
         <tr>
           <th>Weight:</th>
+          <td>goushi</td>
           <td id='weight'></td>
         </tr>
         <tr>
