--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -89,6 +89,7 @@
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
         function(p) {
+          console.log(p);
           drawVisualization(p);
         },
 
